--- a/README
+++ b/README
@@ -14,7 +14,7 @@ By the way: This will be a d-bus script communicating with pidgin.
 
 [0] <http://www.waveprotocol.org/>
 
-Licence
+License
 =======
 
 Copyright (c) 2011 Matthias Matouesk <matou@taunusstein.net>
